Login Page Added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="nav"></div>
    <div id="body">
   <h1>Welcome to Home Page</h1>
- 
+ <div id="login"><a href="login.html">LogIn</a></div>
 
   <div id="signup">
     <h2>Please Signup</h2>
