--- a/login.html
+++ b/login.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
 </head>
+<link rel="stylesheet" href="./styles/index.css">
+
 <body>
     <div id="nav"></div>
-
-
-<div id="footer"> </div>
+    <div id="loginPage">
+        <h2>Please Login</h2>
+        <form action="" id="form">
+        <input type="email" id="email" placeholder="Enter Email">
+        <input type="password" id="password" placeholder="Enter Password">
+<input type="submit" placeholder="LogIn" id="login">    </form>
+    </div>
+    <div id="footer"> </div>
 </body>
 <script src="./scripts/navbar.js"></script>
+<script src="./scripts/login.js" type="module"></script>
 <script src="./scripts/footer.js"></script>
-<link rel="stylesheet" href="./styles/index.css">
+
 
 </html>
